--- a/po/ar.po
+++ b/po/ar.po
@@ -1,5 +1,6 @@
-# Arabic translation for drawer.
+# Arabic translation for the Drawer Module.
 # This file is put in the public domain.
+#
 # sameeer hussain <almusalimalmusalimah> 2011.
 #
 msgid ""
