--- a/po/es.po
+++ b/po/es.po
@@ -1,7 +1,7 @@
-# Spanish translation for enlightenment
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the enlightenment package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# Spanish translation for the Drawer Module.
+# This file is put in the public domain.
+#
+# Paco Molinero <paco@byasl.com>, 2010.
 #
 msgid ""
 msgstr ""
