--- a/po/fi.po
+++ b/po/fi.po
@@ -1,7 +1,7 @@
-# Finnish translation for enlightenment
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the enlightenment package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# Finnish translation for the Drawer Module.
+# This file is put in the public domain.
+#
+# Jussi Aalto <jta_lnx@dnainternet.net>, 2009.
 #
 msgid ""
 msgstr ""
