--- a/po/hr.po
+++ b/po/hr.po
@@ -1,7 +1,7 @@
-# Croatian translation for enlightenment
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the enlightenment package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# Croatian translation for the Drawer Module.
+# This file is put in the public domain.
+#
+# Miro Glavić <glavicmiro@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
