--- a/po/pt.po
+++ b/po/pt.po
@@ -1,7 +1,7 @@
-# Portuguese translation for drawer
-# This file is distributed under the same license as the enlightenment package.
-# Sérgio Marques <smarquespt@gmail.com>, 2010
-# Adaptado ao acordo ortográfico de 1990
+# Portuguese translation for the Drawer Module.
+# This file is put in the public domain.
+#
+# Sérgio Marques <smarquespt@gmail.com>, 2010.
 #
 msgid ""
 msgstr ""
