--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,7 +1,7 @@
-# Brazilian Portuguese translation for enlightenment
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
-# This file is distributed under the same license as the enlightenment package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# Brazilian Portuguese translation for the Drawer Module.
+# This file is put in the public domain.
+#
+# Vagner K. Dos Santos <vagner.ks2@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
