--- a/po/sl.po
+++ b/po/sl.po
@@ -1,8 +1,8 @@
-# translation of drawer.po to Slovenian
-# Slovenian translation of Drawer.
+# Slovenian translation for the Drawer Module.
 # This file is put in the public domain.
 #
 # r1to <renato.rener@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
