--- a/po/cs.po
+++ b/po/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Drawer\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2011-10-16 14:36+0200\n"
 "PO-Revision-Date: 2011-10-09 13:47+0200\n"
 "Last-Translator: Vít Pelčák <vit@pelcak.org>\n"
