--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: enlightenment\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2009-12-01 15:38+0800\n"
 "PO-Revision-Date: 2010-01-11 17:08+0000\n"
 "Last-Translator: Paco Molinero <paco@byasl.com>\n"
