--- a/po/fr.po
+++ b/po/fr.po
@@ -1,10 +1,12 @@
-# Drawer module (e17), French translation.
+# French translation for the Forecasts module.
 # This file is put in the public domain.
+#
 # batden <batden@orange.fr>, 2009.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: Drawer module\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2010-07-10 07:07+0400\n"
 "PO-Revision-Date: 2010-07-10 12:52+0400\n"
 "Last-Translator: batden <batden@orange.fr>\n"
