--- a/po/nl.po
+++ b/po/nl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Drawer\n"
-"Report-Msgid-Bugs-To: http://trac.enlightenment.org/e\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2011-09-02 15:00-0700\n"
 "PO-Revision-Date: 2011-09-03 15:25+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@gmail.com>\n"
