--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: enlightenment\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2009-11-05 16:07+0800\n"
 "PO-Revision-Date: 2009-11-14 03:31+0000\n"
 "Last-Translator: Vagner K. Dos Santos <vagner.ks2@gmail.com>\n"
