--- a/po/tr.po
+++ b/po/tr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: enlightenment\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2009-11-05 16:07+0800\n"
 "PO-Revision-Date: 2009-11-15 11:06+0000\n"
 "Last-Translator: Mustafa Yılmaz <apshalasha@gmail.com>\n"
