--- a/po/uk.po
+++ b/po/uk.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer.HEAD\n"
-"Report-Msgid-Bugs-To: http://trac.enlightenment.org/e\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2009-08-28 02:00-0700\n"
 "PO-Revision-Date: 2011-02-06 06:14+0300\n"
 "Last-Translator: Korostil Daniel <ted.korostiled@gmail.com>\n"
