--- a/po/eo.po
+++ b/po/eo.po
@@ -5,7 +5,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: drawer 0.0.1\n"
+"Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2009-08-25 17:14+0800\n"
 "PO-Revision-Date: 2009-05-16 20:53+0000\n"
