--- a/po/el.po
+++ b/po/el.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-14 17:39+0200\n"
 "Last-Translator: Giorgos Koutsikos <ragecryx@yahoo.gr>\n"
 "Language-Team: Greek <Enlightenment i18n Greek>\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
