--- a/po/eo.po
+++ b/po/eo.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-05-16 20:53+0000\n"
 "Last-Translator: Olivier <eliovir@nospam.gmail.com>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
+"Language: eo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
