--- a/po/fi.po
+++ b/po/fi.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-09 17:34+0000\n"
 "Last-Translator: Jussi Aalto <jta_lnx@dnainternet.net>\n"
 "Language-Team: Finnish <fi@li.org>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
