--- a/po/fr.po
+++ b/po/fr.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2010-07-10 12:52+0400\n"
 "Last-Translator: batden <batden@orange.fr>\n"
 "Language-Team: Enlightenment French Team <pourunmondesansgourou@gmail.com>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
