--- a/po/hr.po
+++ b/po/hr.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-02 09:37+0000\n"
 "Last-Translator: Miro Glavić <glavicmiro@gmail.com>\n"
 "Language-Team: Croatian <hr@li.org>\n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
