--- a/po/it.po
+++ b/po/it.po
@@ -10,7 +10,8 @@ msgstr ""
 "POT-Creation-Date: 2009-08-25 17:14+0800\n"
 "PO-Revision-Date: 2009-06-07 12:47+0200\n"
 "Last-Translator: Massimo Maiurana <maiurana@gmail.com>\n"
-"Language-Team: none>\n"
+"Language-Team: Italian\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
