--- a/po/lt.po
+++ b/po/lt.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2010-01-31 15:00+0000\n"
 "Last-Translator: Joshas <Unknown>\n"
 "Language-Team: Lithuanian <lt@li.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
