--- a/po/pt.po
+++ b/po/pt.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2012-08-24 14:45+0100\n"
 "Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
 "Language-Team: \n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
