--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-11-14 03:31+0000\n"
 "Last-Translator: Vagner K. Dos Santos <vagner.ks2@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
