--- a/po/tr.po
+++ b/po/tr.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-11-15 11:06+0000\n"
 "Last-Translator: Mustafa Yılmaz <apshalasha@gmail.com>\n"
 "Language-Team: Turkish <tr@li.org>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
