--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-23 03:13+0000\n"
 "Last-Translator: luojie-dune <Unknown>\n"
 "Language-Team: Chinese (simplified)\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
