--- a/po/ar.po
+++ b/po/ar.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-07-10 03:00-0700\n"
 "PO-Revision-Date: 2012-01-24 20:45+0300\n"
 "Last-Translator: سمير حسين <almusalimalmusalimah@gmail.com>\n"
-"Language-Team: Arabic <almusalimalmusalimah@gmail.com>\n"
+"Language-Team: Arabic\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
