--- a/po/cs.po
+++ b/po/cs.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2011-10-16 14:36+0200\n"
 "PO-Revision-Date: 2011-10-09 13:47+0200\n"
 "Last-Translator: Vít Pelčák <vit@pelcak.org>\n"
-"Language-Team: Czech <kde-i18n-doc@kde.org>\n"
+"Language-Team: Czech\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
