--- a/po/el.po
+++ b/po/el.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-08-25 17:14+0800\n"
 "PO-Revision-Date: 2009-12-14 17:39+0200\n"
 "Last-Translator: Giorgos Koutsikos <ragecryx@yahoo.gr>\n"
-"Language-Team: Greek <Enlightenment i18n Greek>\n"
+"Language-Team: Greek\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
