--- a/po/fi.po
+++ b/po/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-12-01 15:38+0800\n"
 "PO-Revision-Date: 2009-12-09 17:34+0000\n"
 "Last-Translator: Jussi Aalto <jta_lnx@dnainternet.net>\n"
-"Language-Team: Finnish <fi@li.org>\n"
+"Language-Team: Finnish\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
