--- a/po/hr.po
+++ b/po/hr.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-12-01 15:38+0800\n"
 "PO-Revision-Date: 2009-12-02 09:37+0000\n"
 "Last-Translator: Miro Glavić <glavicmiro@gmail.com>\n"
-"Language-Team: Croatian <hr@li.org>\n"
+"Language-Team: Croatian\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
