--- a/po/lt.po
+++ b/po/lt.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-12-01 15:38+0800\n"
 "PO-Revision-Date: 2010-01-31 15:00+0000\n"
 "Last-Translator: Joshas <Unknown>\n"
-"Language-Team: Lithuanian <lt@li.org>\n"
+"Language-Team: Lithuanian\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
