--- a/po/nl.po
+++ b/po/nl.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2011-09-02 15:00-0700\n"
 "PO-Revision-Date: 2011-09-03 15:25+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@gmail.com>\n"
-"Language-Team:  <vistausss@gmail.com>\n"
+"Language-Team: Dutch\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
