--- a/po/pt.po
+++ b/po/pt.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2010-09-25 17:00-0700\n"
 "PO-Revision-Date: 2012-08-24 14:45+0100\n"
 "Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Portuguese\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
