--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-11-05 16:07+0800\n"
 "PO-Revision-Date: 2009-11-14 03:31+0000\n"
 "Last-Translator: Vagner K. Dos Santos <vagner.ks2@gmail.com>\n"
-"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"Language-Team: Brazilian Portuguese\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
