--- a/po/sl.po
+++ b/po/sl.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2011-02-17 15:00-0800\n"
 "PO-Revision-Date: 2011-02-22 08:27+0100\n"
 "Last-Translator: r1to <renato.rener@gmail.com>\n"
-"Language-Team: Slovenian <sl@li.org>\n"
+"Language-Team: Slovenian\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
