--- a/po/tr.po
+++ b/po/tr.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-11-05 16:07+0800\n"
 "PO-Revision-Date: 2009-11-15 11:06+0000\n"
 "Last-Translator: Mustafa Yılmaz <apshalasha@gmail.com>\n"
-"Language-Team: Turkish <tr@li.org>\n"
+"Language-Team: Turkish\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
