--- a/po/sk.po
+++ b/po/sk.po
@@ -1,52 +1,55 @@
-# Italian translation for the Drawer Module.
+# Slovak translation  for the Drawer Module.
 # This file is put in the public domain.
 #
-# Massimo Maiurana <maiurana@gmail.com>, 2008.
-#
+# quaker66@gmail.com 2011.
+# Štefan Uram <thewaiter@bodhilinux.com>
+
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-01-04 12:39+0100\n"
-"PO-Revision-Date: 2009-06-07 12:47+0200\n"
-"Last-Translator: Massimo Maiurana <maiurana@gmail.com>\n"
-"Language-Team: Italian\n"
-"Language: it\n"
+"PO-Revision-Date: 2011-10-09 13:47+0200\n"
+"Last-Translator: Štefan Uram <thewaiter@bodhilinux.com>\n"
+"Language-Team: Slovak\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: src/e_mod_config.c:51
 msgid "Drawer Module"
-msgstr "Modulo Drawer"
+msgstr "Modul Drawer"
 
 #: src/e_mod_config.c:104
 msgid "Plugins selection"
-msgstr "Selezione plugin"
+msgstr "Výber modulov"
 
 #: src/e_mod_config.c:107
 msgid "Plugins settings"
-msgstr "Impostazioni dei plugin"
+msgstr "Nastavenie modulov"
 
 #: src/e_mod_config.c:167
 msgid "Source plugins"
-msgstr "Plugin per sorgenti"
+msgstr "Zdrojové moduly"
 
 #: src/e_mod_config.c:192
 msgid "View plugins"
-msgstr "Plugin per viste"
+msgstr "Zobrazovacie moduly"
 
 #: src/e_mod_config.c:239 src/e_mod_config.c:260
 msgid "Description: Unavailable"
-msgstr "Descrizione: indisponibile"
+msgstr "Popis: Nedostupný"
 
 #: src/e_mod_config.c:286
 msgid "Source settings"
-msgstr "Impostazioni plugin sorgenti"
+msgstr "Nastavenie zdroja"
 
 #: src/e_mod_config.c:291
 msgid "View settings"
-msgstr "Impostazioni plugin viste"
+msgstr "Nastavenie zobrazenia"
 
 #: src/e_mod_main.c:214
 msgid ""
@@ -58,15 +61,12 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
-"I dati di configurazione del modulo Drawer avevano bisogno di "
-"essere<br>aggiornati. La vostra vecchia configurazione è stata cancellata ed "
-"è<br>stato inizializzato un nuovo set di impostazioni predefinite. "
-"Questo<br>avverrà regolarmente durante lo sviluppo, quindi non riportate bug."
-"<br>Questo significa semplicemente che il modulo ha bisogno di nuovi<br>dati "
-"predefiniti di configurazione per funzionalità mancanti nella<br>vecchia "
-"configurazione. Questo nuovo set sistemerà le cose aggiungendo<br>quei dati. "
-"Potete riconfigurare le cose a vostro piacimento. Ci<br>scusiamo per "
-"l'inconveniente."
+"Nastavenie drawer modulu potrebuje aktualizáciu. Vaše staré nastavenie<br> bolo "
+"nahradené novým východzím. Toto<br>sa bude stávať často počas vývoja, takže "
+"nereportujte<br>chybu. Jednoducho to znamená, že modul potrebuje nové "
+"dáta<br>nastavenia pre funkce, ktoré vaše staré<br>nastavenie neobsahuje. Nové "
+"nastavenie<br>to vyrieši. Teraz si môžete modul nastaviť, ako<br>potrebujet. "
+"Ospravedlňujeme sa za vzniknuté problémy.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -76,43 +76,42 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
-"La vostra configurazione del modulo Drawer è più NUOVA della<br>versione del "
-"modulo. Questo è molto strano. Non dovrebbe succedere a meno<br>che siate "
-"passati ad una vecchia versione del modulo Drawer o avete<br>copiato la "
-"configurazione di un sistema su cui gira una versione<br>più nuova del "
-"modulo. A scopo precauzionale la vostra<br>configurazione è stata adesso "
-"ripristinata ai valori predefiniti.<br>Ci scusiamo per l'inconveniente."
+"Vaše nastavenie je NOVŠIE ako verzia modulu. Je to veľmi<br>zvláštne. Toto by sa "
+"nemalo stať, pokiaľ ste však nedowngradovali<br>modul alebo neskopírovali "
+"nastavenie odniekiaľ,<br>kde bežala novjšia verzia modulu. Ako "
+"protiopatrenie<br>bolo vaše nastavenie obnovené na<br>východzie. Ospravedlňujeme "
+"sa za vzniknuté problémy.<br>"
 
 #: src/e_mod_main.c:482
 msgid "The plugin is not configurable"
-msgstr "Il plugin non è configurabile"
+msgstr "Modul nie je možné nastavovať"
 
 #: src/e_mod_main.c:972 src/e_mod_main.c:980 src/e_mod_main.c:994
 #: src/e_mod_main.c:1006 src/e_mod_main.c:1074 src/e_mod_main.c:1125
 #: src/e_mod_main.c:1171
 msgid "Drawer Plugins"
-msgstr "Plugin di Drawer"
+msgstr "Moduly pre Drawer"
 
 #: src/e_mod_main.c:973
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr "Il plugin '%s' non è stato trovato."
+msgstr "Modul '%s' nebol nájdený."
 
 #: src/e_mod_main.c:981
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr "Non è stato possibile aprire il plugin '%s'."
+msgstr "Modul '%s' nemôže byť otvorený."
 
 #: src/e_mod_main.c:995 src/e_mod_main.c:1075 src/e_mod_main.c:1126
 #: src/e_mod_main.c:1172
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr "Il plugin '%s' non contiene tutte le funzioni richieste."
+msgstr "Modul '%s' neobsahuje všetky dôležité funkcie."
 
 #: src/e_mod_main.c:1007
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr "Il plugin '%s' non ha la versione di API richiesta."
+msgstr "Modul '%s' nemá vyžadovanú verziu API."
 
 #: src/e_mod_main.c:1337
 msgid "Drawer"
@@ -120,178 +119,162 @@ msgstr "Drawer"
 
 #: src/e_mod_main.c:1430
 msgid "Drawer Configuration Updated"
-msgstr "Configurazione di Drawer aggiornata"
+msgstr "Drawer konfigurácia aktualizovaná"
 
 #: src/e_mod_main.c:1785
 msgid "Settings"
-msgstr "Impostazioni"
+msgstr "Nastavenie"
 
 #: src/plugins/sources/directory_watcher.c:275
 msgid "Open Containing Directory"
-msgstr "Apri directory contenitore"
+msgstr "Otvoriť obsahujúci adresár"
 
 #: src/plugins/sources/directory_watcher.c:287
 msgid "Directory Watcher settings"
-msgstr "Impostazioni controllore directory"
+msgstr "Nastavenie strážcu adresárov"
 
 #: src/plugins/sources/directory_watcher.c:346
 msgid "Home"
-msgstr "Home"
+msgstr "Domov"
 
 #: src/plugins/sources/directory_watcher.c:413
 #, c-format
 msgid "Directory (%s)"
-msgstr "Directory (%s)"
+msgstr "Adresár (%s)"
 
 #: src/plugins/sources/directory_watcher.c:504
 msgid "Drawer Plugin : Directory Watcher"
-msgstr "Plugin di Drawer: controllore directory"
+msgstr "Drawer modul: Strážca adresárov"
 
 #: src/plugins/sources/directory_watcher.c:547
 msgid "Watch path"
-msgstr "Controlla percorso"
+msgstr "Cesta"
 
 #: src/plugins/sources/directory_watcher.c:553
 msgid "Custom file manager"
-msgstr "File manager personalizzato"
+msgstr "Vlastný správca súborov"
 
 #: src/plugins/sources/directory_watcher.c:559
 msgid "Sort Options"
-msgstr "Opzioni per ordinamento"
+msgstr "Nastavenie zoradenia"
 
 #: src/plugins/sources/directory_watcher.c:560
 msgid "Sort directories first"
-msgstr "Metti directory in testa"
+msgstr "Triediť najskôr adresáre"
 
 #: src/plugins/sources/directory_watcher.c:564
 msgid "Sort by name"
-msgstr "Ordina per nome"
+msgstr "Zoradiť podľe mena"
 
 #: src/plugins/sources/directory_watcher.c:566
 msgid "Sort by access time"
-msgstr "Ordina per ultimo accesso"
+msgstr "Zoradiť podľa času prístupu"
 
 #: src/plugins/sources/directory_watcher.c:568
 msgid "Sort by modification time"
-msgstr "Ordina per ultima modifica"
+msgstr "Zoradiť podľa času úpravy"
 
 #: src/plugins/sources/directory_watcher.c:570
 msgid "Sort by change time"
-msgstr "Ordina per ultimo cambiamento"
+msgstr "Zoradiť podľa času zmeny"
 
 #: src/plugins/sources/directory_watcher.c:572
 msgid "Sort by size"
-msgstr "Ordina per dimensione"
+msgstr "Zoradiť podľe veľkosti"
 
 #: src/plugins/sources/launcher.c:197
 msgid "Launcher settings"
-msgstr "Impostazioni lanciatore"
+msgstr "Nastavenie spúšťača"
 
 #: src/plugins/sources/launcher.c:318
 msgid "Change Item Properties"
-msgstr "Cambia proprietà oggetto"
+msgstr "Zmeniť vlastnosti"
 
 #: src/plugins/sources/launcher.c:323
 msgid "Remove Item"
-msgstr "Rimuovi oggetto"
+msgstr "Vymazať"
 
 #: src/plugins/sources/launcher.c:346
 #, c-format
 msgid "%s source"
-msgstr "sorgente %s"
+msgstr "%s zdroj"
 
 #: src/plugins/sources/launcher.c:529
 msgid "Drawer Plugin : Launcher"
-msgstr "Plugin di Drawer: lanciatore"
+msgstr "Drawer Modul : Spúšťač"
 
 #: src/plugins/sources/launcher.c:587
 msgid "Selected Bar Source"
-msgstr "Sorgente selezionata per la barra"
+msgstr "Vybraný zdroj"
 
 #: src/plugins/sources/launcher.c:595
 msgid "Add"
-msgstr "Aggiungi"
+msgstr "Pridať"
 
 #: src/plugins/sources/launcher.c:597
 msgid "Delete"
-msgstr "Elimina"
+msgstr "Vymazať"
 
 #: src/plugins/sources/launcher.c:599
 msgid "Configure"
-msgstr "Configura"
+msgstr "Nastaviť"
 
 #: src/plugins/sources/launcher.c:609
 msgid "Sorting options"
-msgstr "Opzioni ordinamento"
+msgstr "Nastavenie triedenia"
 
 #: src/plugins/sources/launcher.c:610
 msgid "Unsorted"
-msgstr "Non ordinato"
+msgstr "Nezotriedené"
 
 #: src/plugins/sources/launcher.c:612
 msgid "Sort applications by local rating"
-msgstr "Ordina applicazioni per valutazione locale"
+msgstr "Zoradiť aplikácie podľa lokálnej obľúbenosti"
 
 #: src/plugins/sources/launcher.c:614
 msgid "Sort applications by overall popularity"
-msgstr "Ordina applicazioni per popolarità generale"
+msgstr "Zoradiť aplikácie podľa celkovej obľúbenosti"
 
 #: src/plugins/sources/launcher.c:651
 msgid "Create new Launcher source"
-msgstr "Crea nuova sorgente per lanciatore"
+msgstr "Vytvoriť nový zdroj spúšťača"
 
 #: src/plugins/sources/launcher.c:652
 msgid "Enter a name for this new source:"
-msgstr "Inserire un nome per questa sorgente:"
+msgstr "Zadajte meno pre tento zdroj:"
 
 #: src/plugins/sources/launcher.c:667
 #, c-format
 msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
-msgstr ""
-"Avete chiesto di eliminare \"%s\".<br><br>Siete sicuri di voler eliminare "
-"questa sorgente per la barra?"
+msgstr "Zadali jste zmazať \"%s\".<br><br>Naozaj chcete zmazať tento zdroj?"
 
 #: src/plugins/sources/launcher.c:671
 msgid "Are you sure you want to delete this bar source?"
-msgstr "Siete sicuri di voler eliminare questa sorgente per la barra?"
+msgstr "Naozaj chcete zmazať tento zdroj?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr "Impostazioni elenco"
+msgstr "Nastavenie zoznamu"
 
 #: src/plugins/views/list.c:811
 msgid "Drawer Plugin : List"
-msgstr "Plugin di Drawer: Elenco"
+msgstr "Drawer Modul : Zoznam"
 
 #: src/plugins/views/list.c:848
 msgid "Item size options"
-msgstr "Opzioni dimensioni oggetti"
+msgstr "Možnosti veľkosti položky"
 
 #: src/plugins/views/list.c:849
 msgid "Large"
-msgstr "Grande"
+msgstr "Veľká"
 
 #: src/plugins/views/list.c:851
 msgid "Medium"
-msgstr "Media"
+msgstr "Stredná"
 
 #: src/plugins/views/list.c:853
 msgid "Small"
-msgstr "Piccola"
+msgstr "Malá"
 
-#~ msgid "History settings"
-#~ msgstr "Impostazioni storico"
-
-#~ msgid "Drawer Plugin : History"
-#~ msgstr "Plugin di Drawer: Storico"
-
-#~ msgid "Sort applications by executable"
-#~ msgstr "Ordina applicazioni per eseguibile"
-
-#~ msgid "Sort applications by date"
-#~ msgstr "Ordina applicazioni per data"
-
-#~ msgid "Sort applications by popularity"
-#~ msgstr "Ordina applicazioni per popolarità"
