--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 A drawer module, which is/will be able to present different types of information
 
-Note: The module is broken and does not work.
+Note: The module is a work-in-project and under active development. At best it is semi-functional currently.
