--- a/po/pt.po
+++ b/po/pt.po
@@ -2,21 +2,22 @@
 # This file is put in the public domain.
 #
 # Sérgio Marques <smarquespt@gmail.com>, 2010.
+# Hugo Carvalho <hugokarvalho@hotmail.com>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
+"Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-01-04 12:39+0100\n"
-"PO-Revision-Date: 2012-08-24 14:45+0100\n"
-"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
+"PO-Revision-Date: 2025-01-06 23:27+0000\n"
+"Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
 "Language-Team: Portuguese\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Portuguese\n"
-"X-Poedit-Country: Portugal\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: src/e_mod_config.c:51
 msgid "Drawer Module"
@@ -64,9 +65,9 @@ msgstr ""
 "removida e ser iniciada uma nova.<br>Isto irá acontecer recorrentemente "
 "durante o ciclo de desenvolvimento e não deve reportar qualquer erro.<br>O "
 "módulo precisava de novos dados para funcionar corretamente e a sua antiga "
-"configuração não os possuia.<br>Este conjunto de valores corrige a "
+"configuração não os possuía.<br>Este conjunto de valores corrige a "
 "configuração e posteriormente pode configurar o módulo ao seu gosto."
-"<br>Desculpe qualquer inconveniente.<br>"
+"<br>Lamentamos o incómodo.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -77,11 +78,11 @@ msgid ""
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
 "A sua versão do Drawer é mais recente do que a do módulo<br>Esta situação é "
-"estranha e não deveria acontecer a menos que você tivesse revertido o módulo "
-"para uma versão inferior ou tenha copiado a configuração de um local em que "
+"estranha e não deveria acontecer a menos que tivesse revertido o módulo para "
+"uma versão inferior ou tenha copiado a configuração de um local em que "
 "esteja a ser executada uma versão mais recente do módulo.<br>Isto é mau e "
-"por precaução, a sua configuração foi reiniciada.<br>Desculpe qualquer "
-"inconveniente.<br>"
+"por precaução, a sua configuração foi reiniciada.<br>Lamentamos o incómodo."
+"<br>"
 
 #: src/e_mod_main.c:482
 msgid "The plugin is not configurable"
@@ -96,23 +97,23 @@ msgstr "\"Plugins\" do Drawer"
 #: src/e_mod_main.c:973
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr "O \"plugin\" %s não foi encontrado."
+msgstr "O \"plugin\" '%s' não foi encontrado."
 
 #: src/e_mod_main.c:981
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr "O \"plugin\" %s não foi iniciado."
+msgstr "O \"plugin\" '%s' não foi iniciado."
 
 #: src/e_mod_main.c:995 src/e_mod_main.c:1075 src/e_mod_main.c:1126
 #: src/e_mod_main.c:1172
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr "O \"plugin\" %s não possui as funções necessárias."
+msgstr "O \"plugin\" '%s' não possui as funções necessárias."
 
 #: src/e_mod_main.c:1007
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr "O \"plugin\" %s não possui a versão API necessária."
+msgstr "O \"plugin\" '%s' não possui a versão API necessária."
 
 #: src/e_mod_main.c:1337
 msgid "Drawer"
@@ -214,7 +215,7 @@ msgstr "Adicionar"
 
 #: src/plugins/sources/launcher.c:597
 msgid "Delete"
-msgstr "Apagar"
+msgstr "Eliminar"
 
 #: src/plugins/sources/launcher.c:599
 msgid "Configure"
@@ -250,12 +251,12 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
-"Solicitou a eliminação de \"%s\".<br><br>Tem a certeza que quer apagar esta "
-"fonte? "
+"Solicitou a eliminação de \"%s\".<br><br>Tem a certeza que pretende eliminar "
+"esta fonte?"
 
 #: src/plugins/sources/launcher.c:671
 msgid "Are you sure you want to delete this bar source?"
-msgstr "Tem a certeza que quer apagar esta fonte? "
+msgstr "Tem a certeza que pretende eliminar esta fonte?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
@@ -267,7 +268,7 @@ msgstr "\"Plugin\" Drawer: Lista"
 
 #: src/plugins/views/list.c:848
 msgid "Item size options"
-msgstr "Opções do tamanho do item"
+msgstr "Opções de tamanho do item"
 
 #: src/plugins/views/list.c:849
 msgid "Large"
