Update TODO: blacklist

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 First, make everything fully functional.
 
+Add blacklist ability to the history plugin.
+
 Original To Do list:
 
 Thumbnailing needs a LOT more work
