--- a/po/sk.po
+++ b/po/sk.po
@@ -65,7 +65,7 @@ msgstr ""
 "nahradené novým východzím. Toto<br>sa bude stávať často počas vývoja, takže "
 "nereportujte<br>chybu. Jednoducho to znamená, že modul potrebuje nové "
 "dáta<br>nastavenia pre funkce, ktoré vaše staré<br>nastavenie neobsahuje. Nové "
-"nastavenie<br>to vyrieši. Teraz si môžete modul nastaviť, ako<br>potrebujet. "
+"nastavenie<br>to vyrieši. Teraz si môžete modul nastaviť, ako<br>potrebujete. "
 "Ospravedlňujeme sa za vzniknuté problémy.<br>"
 
 #: src/e_mod_main.c:234
@@ -78,13 +78,13 @@ msgid ""
 msgstr ""
 "Vaše nastavenie je NOVŠIE ako verzia modulu. Je to veľmi<br>zvláštne. Toto by sa "
 "nemalo stať, pokiaľ ste však nedowngradovali<br>modul alebo neskopírovali "
-"nastavenie odniekiaľ,<br>kde bežala novjšia verzia modulu. Ako "
+"nastavenie odniekiaľ,<br>kde bežala novšia verzia modulu. Ako "
 "protiopatrenie<br>bolo vaše nastavenie obnovené na<br>východzie. Ospravedlňujeme "
 "sa za vzniknuté problémy.<br>"
 
 #: src/e_mod_main.c:482
 msgid "The plugin is not configurable"
-msgstr "Modul nie je možné nastavovať"
+msgstr "Modul nie je možné konfigurovať"
 
 #: src/e_mod_main.c:972 src/e_mod_main.c:980 src/e_mod_main.c:994
 #: src/e_mod_main.c:1006 src/e_mod_main.c:1074 src/e_mod_main.c:1125
@@ -248,7 +248,7 @@ msgstr "Zadajte meno pre tento zdroj:"
 msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
-msgstr "Zadali jste zmazať \"%s\".<br><br>Naozaj chcete zmazať tento zdroj?"
+msgstr "Zadali ste zmazať \"%s\".<br><br>Naozaj chcete zmazať tento zdroj?"
 
 #: src/plugins/sources/launcher.c:671
 msgid "Are you sure you want to delete this bar source?"
