--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 First, make everything fully functional.
 
 Test blacklist functionality to the history plugin.
+use eina_string share in hist blacklist code
 Finish blacklist edit functions and figure out the smart object error:
    ERR<1373>:evas_main ../src/lib/evas/canvas/evas_object_smart.c:151 evas_object_smart_data_get() calling smart object API on non-smart object!
 
