--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Viktor 'urandom' Kojouharov     <vkojouharov@gmail.com>
+Viktor 'urandom' Kojouharov <vkojouharov@gmail.com>
+Stefan Uram <thewaiter@centrum.sk>
+Robert Wiley <ylee@bodhilinux.com>
