--- a/po/sk.po
+++ b/po/sk.po
@@ -212,15 +212,15 @@ msgstr "Nastavenie triedenia"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr "Zoradiť aplikácie podľa spúšťania"
+msgstr "Zoradiť podľa frekvencie spúšťania"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr "Zoradiť aplikácie podľa dátumu"
+msgstr "Zoradiť podľa dátumu"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr "Zoradiť aplikácie podľa obľúbenosti"
+msgstr "Zoradiť podľa obľúbenosti"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
