--- a/po/be.po
+++ b/po/be.po
@@ -1,15 +1,15 @@
 # Belarusian translations for drawer package.
 # This file is put in the public domain.
 #
-# Automatically generated, 2025.
+# R0bur <robursw@gmail.com>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2025-02-02 06:18-0500\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2025-02-15 10:00+0300\n"
+"Last-Translator: R0bur <robursw@gmail.com>\n"
 "Language-Team: none\n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
@@ -20,39 +20,39 @@ msgstr ""
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
-msgstr ""
+msgstr "Модуль Шуфлядка"
 
 #: src/e_mod_config.c:106
 msgid "Plugins selection"
-msgstr ""
+msgstr "Вылучэнне ўбудоў"
 
 #: src/e_mod_config.c:109
 msgid "Plugins settings"
-msgstr ""
+msgstr "Налады ўбудоў"
 
 #: src/e_mod_config.c:171
 msgid "Source plugins"
-msgstr ""
+msgstr "Крыніцы"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
-msgstr ""
+msgstr "Выгляд"
 
 #: src/e_mod_config.c:245 src/e_mod_config.c:266
 msgid "Description: Unavailable"
-msgstr ""
+msgstr "Апісанне: Недаступна"
 
 #: src/e_mod_config.c:292
 msgid "Source settings"
-msgstr ""
+msgstr "Налады крыніц"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr ""
+msgstr "Налады выгляду"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "Тэма Moksha"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -64,6 +64,13 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
+"Канфігурацыя модуля Шуфлядка патрабуе абнаўлення. Старая "
+"канфігурацыя<br>была выцерта, а новыя значэнні устаноўлены. "
+"Так<br>будзе здарацца падчас распрацоўкі, а таму не паведамляйце пра<br>"
+"памылку. Гэта проста азначае, што модулю патрэбныя<br>новыя перадвызначаныя "
+"даныя, каб працаваць далей,<br>таму што старай канфігурацыі не хапае. Новыя "
+"перадвызначаныя даныя<br>выправяць становішча. Вы можаце пераналадзіць "
+"модуль на свой<br>асабісты густ. Выбачайце за нязручнасць.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -73,215 +80,220 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
+"Ваша канфігурацыя модуля Шуфлядка больш новая, чым версія модуля. Гэта "
+"вельмі<br>дзіўна. Так магло здарыцца, калі вы вярнулі старую<br>версію "
+"модуля або скапіявалі канфігурацыю аднекуль,<br>дзе працуе больш новая "
+"версія модуля. Гэта дрэнна і<br>ў якасці засцярогі ваша канфігурацыя "
+"была адноўлена перадвызначанымі<br>наладамі. Выбачайце за нязручнасць.<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
-msgstr ""
+msgstr "Убудова не наладжваецца"
 
 #: src/e_mod_main.c:1029 src/e_mod_main.c:1037 src/e_mod_main.c:1051
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
 #: src/e_mod_main.c:1228
 msgid "Drawer Plugins"
-msgstr ""
+msgstr "Убудовы модуля"
 
 #: src/e_mod_main.c:1030
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr ""
+msgstr "Убудова '%s' не знойдзена."
 
 #: src/e_mod_main.c:1038
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr ""
+msgstr "Убудова '%s' не адкрываецца."
 
 #: src/e_mod_main.c:1052 src/e_mod_main.c:1132 src/e_mod_main.c:1183
 #: src/e_mod_main.c:1229
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr ""
+msgstr "Убудова '%s' не змяшчае ўсіх патрэбных функцый."
 
 #: src/e_mod_main.c:1064
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr ""
+msgstr "Убудова '%s' не мае патрэбнай версіі API."
 
 #: src/e_mod_main.c:1394
 msgid "Drawer"
-msgstr ""
+msgstr "Шуфлядка"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr ""
+msgstr "Канфігурацыя модуля адноўлена"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
-msgstr ""
+msgstr "Налады"
 
 #: src/plugins/sources/directory_watcher.c:253
 msgid "Open Containing Directory"
-msgstr ""
+msgstr "Адкрыць змяшчаючы каталог"
 
 #: src/plugins/sources/directory_watcher.c:263
 msgid "Directory Watcher settings"
-msgstr ""
+msgstr "Налады назіральніка за каталогам"
 
 #: src/plugins/sources/directory_watcher.c:317
 msgid "Home"
-msgstr ""
+msgstr "Хата"
 
 #: src/plugins/sources/directory_watcher.c:380
 #, c-format
 msgid "Directory (%s)"
-msgstr ""
+msgstr "Каталог (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr ""
+msgstr "Плагін модуля : Назіральнік за каталогам"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
-msgstr ""
+msgstr "Шлях назірання"
 
 #: src/plugins/sources/directory_watcher.c:513
 msgid "Custom file manager"
-msgstr ""
+msgstr "Менеджар файлаў"
 
 #: src/plugins/sources/directory_watcher.c:519
 msgid "Sort Options"
-msgstr ""
+msgstr "Варыянты сартавання"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr ""
+msgstr "Спачатку сартаваць каталогі"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
-msgstr ""
+msgstr "Сартаваць па назвах"
 
 #: src/plugins/sources/directory_watcher.c:526
 msgid "Sort by access time"
-msgstr ""
+msgstr "Сартаваць па часе доступу"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr ""
+msgstr "Сартаваць па часе мадыфікацыі"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr ""
+msgstr "Сартаваць па часе змены"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
-msgstr ""
+msgstr "Сартаваць па памеры"
 
 #: src/plugins/sources/history.c:179
 msgid "History settings"
-msgstr ""
+msgstr "Налады гісторыі"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
-msgstr ""
+msgstr "Змяніць уласцівасці элемента"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "Схаваць элемент"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
-msgstr ""
+msgstr "Выдаліць элемент"
 
 #: src/plugins/sources/history.c:583
 msgid "Drawer Plugin : History"
-msgstr ""
+msgstr "Плагін модуля : Гісторыя"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
-msgstr ""
+msgstr "Варыянты сартавання"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr ""
+msgstr "Сартаваць праграмы па выканальнасці"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr ""
+msgstr "Сартаваць праграмы па даце"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr ""
+msgstr "Сартавать праграмы па папулярнасьці"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "Чорны спіс"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "Уключыць чорны спіс"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "Агульныя"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "Праграмы ў чорным спісе"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
-msgstr ""
+msgstr "Дадаць"
 
 #: src/plugins/sources/history.c:663 src/plugins/sources/launcher.c:573
 msgid "Delete"
-msgstr ""
+msgstr "Выдаліць"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "Дадаць праграму чорнага спіса"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "Увядзіце назву праграмы"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
-msgstr ""
+msgstr "Налады запуску"
 
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr ""
+msgstr "Крыніца %s"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr ""
+msgstr "Плагін модуля"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
-msgstr ""
+msgstr "Выбраная крыніца"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr ""
+msgstr "Канфігураваць"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
-msgstr ""
+msgstr "Без парадку"
 
 #: src/plugins/sources/launcher.c:588
 msgid "Sort applications by local rating"
-msgstr ""
+msgstr "Сартаваць праграмы па лакальным рэйтынгу"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr ""
+msgstr "Сартаваць праграмы па агульнай папулярнасьці"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
-msgstr ""
+msgstr "Стварыць новую крыніцу запуску"
 
 #: src/plugins/sources/launcher.c:626
 msgid "Enter a name for this new source:"
-msgstr ""
+msgstr "Увядзіце назву новай крыніцы:"
 
 #: src/plugins/sources/launcher.c:639
 #, c-format
@@ -289,31 +301,33 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
+"Вы запыталі выдаліць \"%s\".<br><br>Вы ўпэўненыя, што жадаеце выдаліць"
+"гэту крыніцу?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr ""
+msgstr "Вы упэўненыя, што жадаеце выдаліць гэту крыніцу?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr ""
+msgstr "Налады спісу"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr ""
+msgstr "Плагін модуля : Спіс"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
-msgstr ""
+msgstr "Варыянты памераў"
 
 #: src/plugins/views/list.c:815
 msgid "Large"
-msgstr ""
+msgstr "Вялікі"
 
 #: src/plugins/views/list.c:817
 msgid "Medium"
-msgstr ""
+msgstr "Сярэдні"
 
 #: src/plugins/views/list.c:819
 msgid "Small"
-msgstr ""
+msgstr "Малы"
